# skelcl

./: .clang-format  .gitignore  .lvimrc  .travis.yml  CMakeLists.txt  CREDITS.txt  Dockerfile  Doxyfile  INSTALL.txt  LICENSE-academic.txt  LICENSE-gpl.txt  LICENSE.txt  Makefile  README.txt  astylerc  build.sh  installDapendencies.sh  installDependenciesArchLinux.sh  installDependenciesCentOS.sh  installDependenciesOSX.command  installDependenciesSUSE.sh  installDependenciesScientificLinux.sh  installDependenciesUbuntu.sh
examples/: CMakeLists.txt
examples/CannyEdgeDetection/: CMakeLists.txt  StencilGauss.cl  main.cpp
examples/CannyEdgeDetection.fused/: CMakeLists.txt  kernel.cl  main.cpp
examples/DotProduct/: CMakeLists.txt  main.cpp
examples/FDTD/: CMakeLists.txt  Makefile  Simulation.cpp  Simulation.h  debug.mak  gcc_Debug.h  main.cpp
examples/FDTD/Debug/: Simulation.dep  SkelFDTD.dep
examples/FDTD/data/: job.rmf
examples/GameOfLife/: CMakeLists.txt  MapOverlap.cl  Stencil.cl  main.cpp
examples/GaussianBlur/: CMakeLists.txt  MapOverlap1D.cl  MapOverlap2D.cl  Stencil1D.cl  Stencil2D.cl  main.cpp
examples/HeatEquation/: CMakeLists.txt  MapOverlap.cl  Stencil.cl  main.cpp
examples/MandelbrotSet/: CMakeLists.txt  main.cpp  mandelbrot.cl
examples/MatrixMultiply/: CMakeLists.txt  main.cpp
examples/PageRank/: CMakeLists.txt  kernel.cl  main.cpp
examples/SAXPY/: CMakeLists.txt  main.cpp
examples/SimpleBig/: CMakeLists.txt  SimpleBig.cpp  common.h  kernels.cl  main.cpp
examples/SkelFDTD/: CMakeLists.txt  Kernels.cl  Makefile  Simulation.cpp  Simulation.h  SkelFDTD.cpp  Stencils.cl  bigjob.rmf  debug.mak  gcc_Debug.h  gcc_Release.h  job.rmf  release.mak
examples/SkelFDTD/Debug/: Simulation.dep  SkelFDTD  out
examples/SkelFDTD/data/: bigjob.rmf
examples/canny/: CMakeLists.txt  cannyGauss.cl  cannyNMS.cl  cannySobel.cl  cannyThreshold.cl  main.cpp
examples/cannyStencil/: CMakeLists.txt  cannyNMS.cl  cannySobel.cl  cannyThreshold.cl  main.cpp
examples/dot_product/: CMakeLists.txt  main.cpp
examples/gameoflife/: CMakeLists.txt  gameoflife.cl  main.cpp
examples/gameoflifeStencil/: CMakeLists.txt  gameoflife.cl  main.cpp
examples/gauss/: CMakeLists.txt  gauss2D.cl  main.cpp  pgm.pgm
examples/gaussStencil/: CMakeLists.txt  gauss2D.cl  gauss2DStencil.cl  gauss2DStencil2.cl  gauss2DStencil3.cl  gauss2DStencil4.cl  main.cpp
examples/gaussY/: CMakeLists.txt  gaussY.cl  main.cpp
examples/gaussYStencil/: CMakeLists.txt  gaussY.cl  main.cpp
examples/heat/: CMakeLists.txt  heat.cl  main.cpp
examples/heatStencil/: .gitignore  CMakeLists.txt  heat.cl  main.cpp
examples/mandelbrot/: CMakeLists.txt  main.cpp  mandelbrot.cl
examples/matrix_mult/: CMakeLists.txt  main.cpp
examples/montecarlo/: CMakeLists.txt  main.cpp
examples/saxpy/: CMakeLists.txt  main.cpp
executor/: CMakeLists.txt  executor.cpp  executor.h  main.cpp
executor/jni/: executor.cpp  globalArg.cpp  kernelArg.cpp  localArg.cpp  opencl_executor_Executor.h  valueArg.cpp
libraries/pvsutil/: .gitignore  CMakeLists.txt  README
libraries/pvsutil/include/: CL
libraries/pvsutil/libraries/: gtest
libraries/pvsutil/msvc/: pvsutil.vcxproj  pvsutil.vcxproj.filters  pvsutilTests.vcxproj  pvsutilTests.vcxproj.filters
libraries/pvsutil/src/: Arg.cpp  Assert.cpp  CLArgParser.cpp  CMakeLists.txt  Description.cpp  Flags.cpp  Logger.cpp  Timer.cpp  Version.cpp
libraries/pvsutil/test/: CMakeLists.txt  Test.h  TimerTests.cpp
libraries/ssedit/: CMakeLists.txt  README
libraries/ssedit/libraries/: pvsutil  readme
libraries/ssedit/src/: CMakeLists.txt  CallExpression.cpp  Cursor.cpp  Delta.cpp  DeltaTree.cpp  Entity.cpp  Function.cpp  Parameter.cpp  SourceFile.cpp  SourceLocation.cpp  SourceRange.cpp  TempSourceFile.cpp  Type.cpp  Typedef.cpp
libraries/ssedit/test/: CMakeLists.txt  CursorTests.cpp  EntityTests.cpp  FunctionInfoTests.cpp  OpenSourceFileTests.cpp  ParameterInfoTests.cpp  RenameFunctionTests.cpp  RenameTypedefTests.cpp  Test.h  TypeTests.cpp  TypedefInfoTests.cpp  utilities.h
libraries/ssedit/tools/: CMakeLists.txt  printAST.cpp
libraries/ssedit2.0/src/: CMakeLists.txt  CustomToolInvocation.cpp  CustomToolInvocation.h  FixKernelParameterCallback.cpp  FixKernelParameterCallback.h  FixStringCall.h  RedefineTypedefCallback.cpp  RedefineTypedefCallback.h  RefactoringTool.cpp  RefactoringTool.h  RenameFunctionCallback.cpp  RenameFunctionCallback.h  RenameTypedefCallback.cpp  RenameTypedefCallback.h  Source.cpp  SourceCode.cpp  TransferArgumentsCallback.cpp  TransferArgumentsCallback.h  TransferParametersCallback.cpp  TransferParametersCallback.h  Utilities.h
libraries/ssedit2.0/test/: CMakeLists.txt  RenameFunctionTest.cpp  RenameTypedefTest.cpp  TransferArgumentsTest.cpp  TransferParametersTest.cpp
libraries/stooling/: .gitignore  CMakeLists.txt
libraries/stooling/libraries/: gtest  llvm
libraries/stooling/msvc/: stooling.vcxproj  stooling.vcxproj.filters  stoolingTests.vcxproj  stoolingTests.vcxproj.filters
libraries/stooling/src/: CMakeLists.txt  CustomToolInvocation.cpp  CustomToolInvocation.h  FixKernelParameterCallback.cpp  FixKernelParameterCallback.h  RedefineTypedefCallback.cpp  (+15 more)
src/: Assert.cpp  BlockDistribution.cpp  CMakeLists.txt  Chris.cpp  CopyDistribution.cpp  Device.cpp  DeviceBuffer.cpp  DeviceID.cpp  DeviceList.cpp  DeviceProperties.cpp  Distribution.cpp  Event.cpp  Index.cpp  IndexMatrix.cpp  IndexVector.cpp  KernelUtil.cpp  Local.cpp  Logger.cpp  Map.cpp  MatrixSize.cpp  OmniTuneClient.cpp  PlatformID.cpp  Program.cpp  Significances.cpp  SingleDistribution.cpp  SkelCL.cpp  Skeleton.cpp  Source.cpp  StencilShape.cpp  Util.cpp
test/: AllPairsTests.cpp  CMakeLists.txt  DeviceSelectionTests.cpp  DeviceTests.cpp  DevicesTests.cpp  DistributionTests.cpp  IndexMatrixTests.cpp  IndexVectorTests.cpp  MapOverlapTests.cpp  MapTests.cpp  MatrixTests.cpp  ProgramTests.cpp  ReduceTests.cpp  SHA1Tests.cpp  ScanTests.cpp  StencilTests.cpp  Test.h  VectorTests.cpp  ZipTests.cpp  gauss2DStencil.cl  gauss2DStencil2.cl
tools/: CMakeLists.txt  OpenCLInfo.cpp
(+173 files in other folders)
