# set include dir for all examples
include_directories ("${PROJECT_SOURCE_DIR}/include")

include_directories (${SKELCL_COMMON_INCLUDE_DIR})
link_directories (${SKELCL_COMMON_LIB_DIR})

add_subdirectory (CannyEdgeDetection)
add_subdirectory (mandelbrot)
add_subdirectory (matrix_mult)
add_subdirectory (dot_product)
add_subdirectory (saxpy)
add_subdirectory (gauss)
add_subdirectory (gaussY)
add_subdirectory (gaussStencil)
add_subdirectory (gaussYStencil)
add_subdirectory (gameoflife)
add_subdirectory (gameoflifeStencil)
add_subdirectory (heatStencil)
add_subdirectory (heat)
add_subdirectory (SkelFDTD)
